add script for mariadb

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -18,7 +18,7 @@ volumes:
        driver_opts:
           type: 'none'
           o: bind
-          device: /home/jetan/database
+          device: /home/jetan/data/database
 
 networks:
     docker-network:
