--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:bookworm
 
-RUN apt-get update -y && apt-get install -y php php-fpm php-mysql curl && rm -rf /var/lib/apt/lists/*
+RUN apt-get update -y && apt-get install -y php-fpm php-mysql curl && rm -rf /var/lib/apt/lists/*
 
 COPY ./tools/script.sh .
 
